--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -121,3 +121,29 @@ input:-webkit-autofill:active {
 .form-buttons button {
   width: 48%;
 }
+
+/* Barra de navegacion */
+.navbar {
+  display: flex;
+  gap: 1rem;
+  background-color: #333;
+  padding: 1rem;
+}
+
+.navbar a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.navbar a:hover {
+  text-decoration: underline;
+}
+
+h1{
+  color: black;
+}
+
+p{ 
+  color: black;
+}
