--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -241,4 +241,48 @@ p{
 }
 
 
+.app-container {
+  padding: 1rem;
+  max-width: 900px;
+  margin: auto;
+}
+
+/* En escritorio, aseguramos más espacio */
+@media screen and (min-width: 768px) {
+  .app-container {
+    padding: 2rem;
+  }
+}
+
+.home-container {
+  text-align: center;
+  margin-top: 2rem;
+}
+
+.home-container h1 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+  .home-container h1 {
+    font-size: 2.5rem;
+  }
+}
+
+
+.main-container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 24px;
+  background-color: #f4f4f4; /* opcional, da más estructura visual */
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* opcional */
+}
+
+.main-container h2 {
+  text-align: center;
+  margin-bottom: 16px;
+}
+
 /*--FIN CSS--*/
