--- a/vite-project/src/components/NavBar.css
+++ b/vite-project/src/components/NavBar.css
@@ -24,7 +24,7 @@
   display: none; /* Se mostrará solo en pantallas pequeñas */
   flex-direction: column;
   justify-content: space-between;
-  height: 24px; /* Altura total de las tres barras */
+  height: 24px;
   width: 30px;
   padding: 0;
 }
@@ -74,42 +74,35 @@
   text-decoration: underline;
 }
 
-
-/* Media query ≤500px */
-
+/* --- Media query para móviles --- */
 @media (max-width: 500px) {
   .navbar-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding:25px ;
-  
-}
+    justify-content: space-between;
+    padding: 25px;
+  }
 
-    /* Mostrar el botón hamburguesa */
   .navbar-toggle {
     display: flex;
   }
 
-  /* Ocultar los enlaces por defecto */
   .navbar-links {
     position: absolute;
-    top: 100%;           
+    top: 100%;
     left: 0;
     right: 0;
-    background-color: #1d5c9e; 
+    background-color: #1d5c9e;
     flex-direction: column;
     overflow: hidden;
-    max-height: 0;       
-    transition: max-height 0.3s ease;
+    max-height: 0;
+    opacity: 0;
+    transition: max-height 0.3s ease, opacity 0.3s ease;
   }
 
-  /* Cuando tenga la clase “mostrar” se expand*/ 
   .navbar-links.mostrar {
-    max-height: 300px;   
+    max-height: 500px;
+    opacity: 1;
   }
 
-  /*Enlaces ocupan 100% de ancho y se apilan */
   .nav-link {
     width: 100%;
     padding: 12px 16px;
